some align fixed

--- a/src/modules/robot/components/RobotFilters/RobotFilters.module.css
+++ b/src/modules/robot/components/RobotFilters/RobotFilters.module.css
@@ -8,7 +8,7 @@
   z-index: 99;
   transition: 0.5s;
   right: 10px;
-  bottom: 50px;
+  bottom: 60px;
 }
 .filter_icon{
   transform: scale(1.3);
